# ligen-c

./: Cargo.toml  README.md
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: .#proc_macro.rs  RustObject.h  lib.rs  proc_macro.rs
core/src/ast/: identifier.rs  mod.rs  typ.rs  type_.rs  types.rs
core/src/generator/: CMakeLists.txt  bindings.rs  externs.rs  ffi.rs  mod.rs  project.rs
core/src/proc_macro/: ligen_c.rs  ligen_c_package.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/ast/: type_.rs
crates/core/src/generator/: bindings.rs  externs.rs  ffi.rs  files.rs  mod.rs  project.rs
crates/ligen-c/: Cargo.toml
crates/ligen-c/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/macro/tests/: externs.rs
crates/main/: Cargo.toml
examples/adder/: Cargo.toml
examples/adder-c/: CMakeLists.txt
examples/adder-c/src/: main.c
examples/adder/src/: lib.rs
examples/counter/: Cargo.toml  build.rs
examples/counter-c/: CMakeLists.txt
examples/counter-c/src/: main.c
examples/counter/src/: lib.rs
examples/ligen/simple/: CMakeLists.txt
examples/ligen/simple/include/: test.h
examples/simple/: Cargo.toml
examples/simple-c/: CMakeLists.txt
examples/simple-c/src/: main.c
examples/simple/src/: lib.rs
macro/: Cargo.toml
macro/src/: lib.rs
macro/tests/: externs.rs
src/: input.h  lib.rs  method.h  object.h
src/ast/: args.rs  assignment.rs  ast.rs  cmacro.rs  expression.rs  function.rs  functionblock.rs  functioncall.rs  functionstatement.rs  identifier.rs  mod.rs  parameter.rs  statement.rs  strct.rs  typ.rs  type_.rs  typedef.rs  types.rs  variabledecl.rs
src/generators/: args.rs  ast.rs  function.rs  mod.rs  parameter.rs  typ.rs
tests/: test.rs
