[package]
name    = "ligen-c"
version = "0.1.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
ligen-c-core = { path = "../core" }
ligen-core   = { path = "../../ligen/core" }
ligen        = { path = "../../ligen/macro" }
proc-macro2  = "1.0.27"
quote = "1.0.9"
