[package]
name    = "ligen-c-core"
version = "0.1.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml  = "0.9.2"
ligen = { path = "../../../ligen/crates/ligen" }