[package]
name          = "ligen-c-core"
version       = "0.1.1"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
description   = "C binding generator"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen-c"
readme        = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.9.2"
ligen      = "0.1.14"
