[package]
name          = "ligen-c-macro"
version       = "0.1.1-alpha.0"
authors       = [ "Danilo Guanabara <danguafer@gmail.com>" ]
edition       = "2018"
description   = "C binding generator"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen-c"
readme        = "../../README.md"

[lib]
proc-macro = true

[dependencies]
ligen-c-core = "0.1.1"
ligen        = "0.1.14"
