[package]
name          = "ligen-c-macro"
version       = "0.1.3-alpha.0"
authors       = [ "Danilo Guanabara <danguafer@gmail.com>" ]
edition       = "2018"
description   = "C binding generator"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen-c"
readme        = "../../README.md"

[lib]
proc-macro = true

[dependencies]
ligen-c-core = { path = "../core" }
ligen        = { path = "../../../ligen/crates/main" }
