[package]
name = "counter"
version = "0.1.0"
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib","staticlib"]

[dependencies]
# FIXME: Update the example with a crate.io package when it's releasable.
ligen-c = { path = "../../crates/ligen-c" }
