CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("simple-c")

IF(TARGET ${PROJECT_NAME})
RETURN()
ENDIF()

ADD_SUBDIRECTORY(../ligen ligen)

AUX_SOURCE_DIRECTORY(src SOURCES)

# INTERFACE is used to create a header-only library.
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC simple)